--- a/lab/lab.vcxproj.filters
+++ b/lab/lab.vcxproj.filters
@@ -3,8 +3,10 @@
   <ItemGroup>
     <ClCompile Include="lab.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="sfinae_class_template.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="mpl.h" />
   </ItemGroup>
 </Project>
